Fixed and issue with previous days causing the data to not properly show. When the arrow was clicked. The show more buttons would disappear. Also adjusted the border bottom of arrow to remove the gap and allow seamlessness.

--- a/main.css
+++ b/main.css
@@ -37,6 +37,265 @@ body {
   line-height: 1.6;
   background-image: url(images/mars.jpg);
   background-size: cover;
+  background-size: cover;
+  height: 100vh;
+  overflow: hidden;
   color: var(--clr-light);
-  min-height: 100vh;
+}
+
+h1, h2, h3 {
+  line-height: 1;
+}
+
+a {
+  color: var(--clr-accent);
+}
+a:hover {
+  color: var(--clr-accent-dark);
+}
+
+.main-title {
+  font-size: var(--fs-h1);
+  font-weight: var(--clr-light);
+  text-transform: uppercase;
+  color: var(--clr-accent);
+  letter-spacing: 2px;
+  grid-column: 1/-1;
+}
+
+.section-title {
+  font-style: var(--fs-h2);
+  font-weight: var(--fw-bold);
+  margin: 0;
+}
+
+.section-title--date {
+  font-size: var(--fs-xl);
+}
+
+.reading {
+  font-size: var(--fs-h1);
+  margin: 0;
+  color: var(--clr-gray);
+}
+
+.mars-current-weather {
+  background: rgba(0, 0, 0, 0.7);
+  padding: 2em;
+  max-width: 1000px;
+  margin: 4em 0 0 4em;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2em;
+}
+
+.date {
+  grid-column: 1/2;
+}
+.date__day {
+  font-size: var(--fs-h2);
+  margin: 0;
+  color: var(--clr-gray);
+  font-weight: var(--fw-light);
+}
+
+.temp {
+  --border: solid .25em var(--clr-accent-dark);
+  grid-column: 2/3;
+  border-left: var(--border);
+  border-right: var(--border);
+  padding: 0 2em;
+}
+
+.wind {
+  grid-column: 3/4;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: min-content 1fr;
+  align-self: start;
+}
+.wind .section-title,
+.wind .reading {
+  grid-column: 2/3;
+}
+.wind__direction {
+  --size: 6rem;
+  width: var(--size);
+  height: var(--size);
+  border-radius: 58%;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: grid;
+  place-items: center;
+  grid-row: 1/span 2;
+}
+.wind__arrow {
+  /*update custom props within JS to
+   update the direction*/
+  --direction: 180deg;
+  --size: 1rem;
+  /* using custom props allows for calc to be used & updating size is easy*/
+  height: calc(var(--size) * 3);
+  width: var(--size);
+  background: var(--clr-accent-dark);
+  /* changes arrow element into a triangle*/
+  -webkit-clip-path: polygon(50% 0, 0% 100%, 100% 100%);
+          clip-path: polygon(50% 0, 0% 100%, 100% 100%);
+  transform: translateY(-25%);
+  rotate: var(--direction);
+  transition: transform 500ms ease;
+}
+
+.info {
+  grid-column: 1/3;
+}
+
+.unit {
+  grid-column: 3/4;
+  place-self: end;
+  color: var(--clr-light);
+  display: flex;
+  opacity: 0.7;
+  transition: opacity 275ms linear;
+}
+.unit:hover {
+  opacity: 1;
+}
+.unit label {
+  cursor: pointer;
+}
+.unit input {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.unit__toggle {
+  cursor: pointer;
+  width: 4em;
+  border: 2px solid var(--clr-light);
+  background: transparent;
+  padding: 0;
+  border-radius: 100vmax;
+  margin: 0 1em;
+}
+.unit__toggle::after {
+  content: "";
+  background: var(--clr-light);
+  border-radius: 50%;
+  height: 1rem;
+  display: block;
+  margin: 3px;
+  margin-left: auto;
+  width: 1rem;
+}
+.unit :checked ~ .unit__toggle::after {
+  margin-left: 3px;
+}
+
+.previous-weather {
+  background: var(--clr-light);
+  color: var(--clr-dark);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  transform: translateY(68%);
+  transition: transform 350ms ease;
+  padding: 3rem;
+}
+
+.show-previous-weather {
+  position: absolute;
+  background: var(--clr-light);
+  left: 50%;
+  width: 10rem;
+  transform: translate(-50%, calc(-100% - 3rem));
+  text-align: center;
+  font-size: var(--fs-h2);
+  line-height: 1;
+  -webkit-clip-path: polygon(50% 0, 0 100%, 100% 100%);
+          clip-path: polygon(50% 0, 0 100%, 100% 100%);
+  cursor: pointer;
+  color: var(--clr-gray);
+  border: 0;
+  font-family: inherit;
+  border-bottom: 1px solid var(--clr-light);
+}
+.show-previous-weather:hover, .show-previous-weather:focus {
+  color: var(--clr-dark);
+}
+.show-previous-weather span {
+  display: block;
+  transform: rotate(0);
+  transition: transform 300ms ease;
+}
+
+.previous-days {
+  display: flex;
+  justify-content: space-between;
+}
+
+.previous-weather__title {
+  text-align: center;
+}
+
+.previous-day {
+  opacity: 0;
+}
+
+.show-weather.previous-weather {
+  transform: translateY(5%);
+}
+.show-weather.previous-weather .show-previous-weather ~ span {
+  display: block;
+  transform: rotate(180deg) translateY(-6px);
+}
+.show-weather.previous-weather .previous-weather__title, .show-weather.previous-weather .previous-day {
+  opacity: 1;
+  animation: slideUpIn 750ms forwards;
+}
+.show-weather.previous-weather .previous-weather__title {
+  text-align: left;
+}
+.show-weather.previous-weather .previous-day:nth-child(1) {
+  animation-delay: 100ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(2) {
+  animation-delay: 125ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(3) {
+  animation-delay: 150ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(4) {
+  animation-delay: 175ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(5) {
+  animation-delay: 200ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(6) {
+  animation-delay: 225ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(7) {
+  animation-delay: 300ms;
+}
+.show-weather.previous-weather .previous-weather__title,
+.show-weather.previous-weather .previous-day {
+  animation: slideUpIn 750ms forwards;
+}
+.show-weather.previous-weather .previous-weather__title {
+  text-align: left;
+}
+
+@keyframes slideUpIn {
+  0% {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }/*# sourceMappingURL=main.css.map */
